recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:5: error: ')' expected but ',' found.
		 	for(k<-0 to 5 by 0,01){
                                          ^Spiral:13: error: illegal start of simple expression
		 }
                 ^